# CFLT

./: CLMFaceTest.cpp  CMakeLists.txt  README.md  test.txt  test2.txt
CLM/: CMakeLists.txt
CLM/include/: CCNF_patch_expert.h  CCNF_patch_expert.hpp  CLM.hpp  CLMConfig.h  CLMParameters.hpp  CLM_utils.hpp  LandmarkLocaliser.hpp  LandmarkMapper.hpp  PDM.hpp  PatchExperts.hpp  SVR_patch_expert.hpp
CLM/model/: clm_general.txt  clm_vip_106.txt  vip_106.txt  vip_general.txt
CLM/model/patch_experts/: svr_patches_0.25_general.txt  svr_patches_0.25_general.txt.old.txt  svr_patches_0.25_multi_pie.txt  svr_patches_0.25_vip_106.txt  svr_patches_0.25_vip_76.txt  svr_patches_0.35_general.txt  svr_patches_0.35_general.txt.old.txt  svr_patches_0.35_multi_pie.txt  svr_patches_0.35_vip_106.txt  svr_patches_0.35_vip_76.txt  svr_patches_0.5_general.txt  svr_patches_0.5_general.txt.old.txt  svr_patches_0.5_multi_pie.txt  svr_patches_0.5_vip_106.txt  svr_patches_0.5_vip_76.txt  svr_patches_1_general.txt  svr_patches_1_multi_pie.txt
CLM/model/pdms/: pdm_106_aligned_vip.txt  pdm_68_aligned_vip.txt  pdm_76_aligned_vip.txt
CLM/src/: CCNF_patch_expert.cpp  CLM.cpp  CLMParameters.cpp  CLM_utils.cpp  LandmarkLocaliser.cpp  LandmarkMapper.cpp  PDM.cpp  PatchExperts.cpp  SVR_patch_expert.cpp
HyperLandmarks/: CMakeLists.txt  Info.plist  main.cpp
HyperLandmarks/src/: ldmarkmodel.cpp
HyperLandmarks/src/include/: ldmarkmodel.h
